// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Rendering Checked state 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "flexDirection": "row",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="pressable"
    >
      <View
        style={
          [
            {
              "justifyContent": "center",
            },
            {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <Icon
          color="#212121"
          name="square-check"
          size={16}
          type="light"
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexShrink": 1,
      }
    }
  >
    <Text>
      Test checkbox
    </Text>
  </View>
</View>
`;

exports[`Checkbox Rendering Unchecked state 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="pressable"
    >
      <View
        style={
          [
            {
              "justifyContent": "center",
            },
            {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <Icon
          color="#212121"
          name="square"
          size={16}
          type="light"
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexShrink": 1,
      }
    }
  >
    <Text>
      Test checkbox
    </Text>
  </View>
</View>
`;
